--- a/Remindersv3/ACUViewController.xib
+++ b/Remindersv3/ACUViewController.xib
@@ -6,6 +6,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ACUViewController">
             <connections>
+                <outlet property="datePicker" destination="Tgh-uS-F6K" id="gbD-fR-ryq"/>
+                <outlet property="descriptionTextField" destination="FrI-jn-AWJ" id="6DW-YU-1aZ"/>
+                <outlet property="nameTextField" destination="ebh-Wo-dgb" id="s4c-pj-THT"/>
                 <outlet property="reminderDate" destination="Tgh-uS-F6K" id="Wc0-od-mZO"/>
                 <outlet property="reminderDescription" destination="FrI-jn-AWJ" id="k2f-v3-Q6s"/>
                 <outlet property="reminderName" destination="ebh-Wo-dgb" id="KQh-oc-1sR"/>
@@ -13,7 +16,7 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT" customClass="UIControl">
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -31,7 +34,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ti4-6G-EqW">
-                    <rect key="frame" x="96" y="402" width="116" height="30"/>
+                    <rect key="frame" x="102" y="462" width="116" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <state key="normal" title="Create Reminder">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -81,6 +84,9 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+            <connections>
+                <action selector="backgroundTapped:" destination="-1" eventType="touchUpInside" id="Hxv-hH-ZHd"/>
+            </connections>
         </view>
     </objects>
 </document>
