--- a/Storyboard.storyboard
+++ b/Storyboard.storyboard
@@ -1,32 +1,37 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6185.7" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="gKk-yf-bxf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="gKk-yf-bxf">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6181.2"/>
+        <deployment defaultVersion="1792" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
-        <!--Reminders-->
+        <!--Table View Controller - Reminders-->
         <scene sceneID="qFw-0J-uj6">
             <objects>
                 <tableViewController id="m7P-6h-Hhv" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="5Bf-5m-SXZ">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="5Bf-5m-SXZ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <sections>
                             <tableViewSection id="wUI-fq-EMt">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" ambiguous="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="7H0-kL-dEu" detailTextLabel="m61-PD-eXa" style="IBUITableViewCellStyleSubtitle" id="efX-hc-yez">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="7H0-kL-dEu" detailTextLabel="m61-PD-eXa" style="IBUITableViewCellStyleSubtitle" id="efX-hc-yez">
+                                        <rect key="frame" x="0.0" y="64" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="efX-hc-yez" id="UDH-MJ-Gyg">
+                                            <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="7H0-kL-dEu">
+                                                    <rect key="frame" x="15" y="5" width="31" height="20"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Detail" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="m61-PD-eXa">
+                                                    <rect key="frame" x="15" y="25" width="30" height="14"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -35,18 +40,22 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" ambiguous="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="7ib-bY-94f" detailTextLabel="SCj-Oq-Tqs" style="IBUITableViewCellStyleSubtitle" id="o7a-v9-F29">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="7ib-bY-94f" detailTextLabel="SCj-Oq-Tqs" style="IBUITableViewCellStyleSubtitle" id="o7a-v9-F29">
+                                        <rect key="frame" x="0.0" y="108" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="o7a-v9-F29" id="vS7-bo-92c">
+                                            <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="7ib-bY-94f">
+                                                    <rect key="frame" x="15" y="5" width="31" height="20"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Detail" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="SCj-Oq-Tqs">
+                                                    <rect key="frame" x="15" y="25" width="30" height="14"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -55,18 +64,22 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" ambiguous="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="0zl-6t-vQy" detailTextLabel="iNB-yU-vLo" style="IBUITableViewCellStyleSubtitle" id="kW6-Ra-0Yv">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="0zl-6t-vQy" detailTextLabel="iNB-yU-vLo" style="IBUITableViewCellStyleSubtitle" id="kW6-Ra-0Yv">
+                                        <rect key="frame" x="0.0" y="152" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="kW6-Ra-0Yv" id="zNf-3l-GS2">
+                                            <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="0zl-6t-vQy">
+                                                    <rect key="frame" x="15" y="5" width="31" height="20"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Detail" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="iNB-yU-vLo">
+                                                    <rect key="frame" x="15" y="25" width="30" height="14"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -87,11 +100,12 @@
                         <barButtonItem key="leftBarButtonItem" systemItem="edit" id="Bso-fx-Jee"/>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="AdD-hQ-8MN">
                             <connections>
-                                <segue destination="LuM-Vk-EPd" kind="show" id="hku-04-UgM"/>
+                                <segue destination="LuM-Vk-EPd" kind="push" id="hku-04-UgM"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="ktJ-A2-Fpf">
                         <autoresizingMask key="autoresizingMask"/>
                     </refreshControl>
@@ -100,7 +114,7 @@
             </objects>
             <point key="canvasLocation" x="809" y="471"/>
         </scene>
-        <!--NewReminder-->
+        <!--New Reminder View Controller - NewReminder-->
         <scene sceneID="GMY-Z4-S85">
             <objects>
                 <viewController title="NewReminder" id="LuM-Vk-EPd" customClass="ACUNewReminderViewController" sceneMemberID="viewController">
@@ -156,17 +170,17 @@
                     <navigationItem key="navigationItem" title="Add New" id="5md-Cy-Pbi">
                         <barButtonItem key="rightBarButtonItem" systemItem="done" id="zNL-zB-1kV">
                             <connections>
-                                <action selector="addReminder:" destination="LuM-Vk-EPd" id="nRI-jb-vYE"/>
-                                <segue destination="m7P-6h-Hhv" kind="show" id="oRg-Wk-dwd"/>
+                                <action selector="addReminder:" destination="LuM-Vk-EPd" id="N3W-gt-ANa"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
-                        <outlet property="reminderDateField" destination="2GD-oa-PXa" id="ug1-75-TKi"/>
-                        <outlet property="reminderDescriptionView" destination="8C0-Qf-C93" id="HCL-Nq-IxE"/>
-                        <outlet property="reminderNameField" destination="8do-J4-2lQ" id="N11-nO-IY0"/>
+                        <outlet property="reminderDateField" destination="2GD-oa-PXa" id="6zQ-q2-NE4"/>
+                        <outlet property="reminderDescriptionView" destination="8C0-Qf-C93" id="N1e-xg-O31"/>
+                        <outlet property="reminderNameField" destination="8do-J4-2lQ" id="5zO-IJ-2oO"/>
                         <outlet property="tap" destination="tgk-bu-rr7" id="YTa-5w-Y2A"/>
                     </connections>
                 </viewController>
@@ -179,7 +193,7 @@
             </objects>
             <point key="canvasLocation" x="1593" y="237"/>
         </scene>
-        <!--Reminders-->
+        <!--Navigation Controller - Reminders-->
         <scene sceneID="aW3-Dm-UA6">
             <objects>
                 <navigationController title="Reminders" id="gKk-yf-bxf" sceneMemberID="viewController">
@@ -196,7 +210,9 @@
             <point key="canvasLocation" x="109" y="471"/>
         </scene>
     </scenes>
-    <inferredMetricsTieBreakers>
-        <segue reference="oRg-Wk-dwd"/>
-    </inferredMetricsTieBreakers>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination"/>
+    </simulatedMetricsContainer>
 </document>
